# CMaker

./: .gitignore  CMakeLists.txt  Manifest.MF
Docs/: CMaker.out
resources/: blue.css  cmaker.css  green.css  orange.css
resources/data/: Recents.csv
src/: AddFileUI.java  CMConsole.java  CMKeys.java  CMLogger.java  CMakerUI.java  CSVHandler.java  CouldNotCreateProjectException.java  CreateUI.java  ExternalUI.java  FXHelper.java  GenerateTestsUI.java  Maker.java  ManagerUI.java  PathNotFoundException.java  Project.java  ProjectExistsException.java  Setting.java  SettingsUI.java  StartUI.java  Theme.java
tests/: TestCSV.csv  TestCSVHandler.java  TestMaker.java  TestProject.java
tests/TestCMaker/: CMakeLists.txt  CMaker.properties
tests/TestCMaker/src/: TestFile.java
